--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
               <a href="#">Новости</a>
             </li>
             <li>
+              <a href="barbershop-price.html">Прайс-лист</a>
             </li>
             <li>
               <a href="#">Магазин</a>
@@ -80,6 +81,7 @@
           <p>
             Барбершоп «Бородинский»<br>
             Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+            Телефон: +7 (495) 666-02-66
           </p>
           <p>
             Время работы:<br>
@@ -108,6 +110,7 @@
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
+          Телефон: +7 (495) 666-02-66
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
