Доработка учебного проекта
Устранены обговорённые замечания.

--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -8,10 +8,10 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
+          <a href="index.html">
+            <img src="img/secondary-logo.png" width="111" height="24" title="Go to Home page" alt="Barbershop">
+          </a>
           <ul>
-            <li>
-              <a href="index.html"><img src="img/secondary-logo.png" width="111" height="24" title="Go to Home page" alt="Barbershop"></a>
-            </li>
             <li>
               <a href="#">Информация</a>
             </li>
@@ -36,8 +36,8 @@
     </header>
     <main class="container">
       <section class="item-header">
-        <h2 class="item-header-title">Набор для путешествий "Baxter of California"</h2>
-        <nav class="item-breadcrumbs">
+        <h1>Набор для путешествий "Baxter of California"</h1>
+        <div class="breadcrumbs">
           <ul>
             <li>
               <a href="index.html">Главная</a>
@@ -51,23 +51,25 @@
             </li>
             <li>Набор для путешествий "Baxter of California"</li>
           </ul>
-        </nav>        
+        </div>        
       </section>
       <figure class="item-img">
-        <img class="item-img-large" src="img/travel-set-large.jpg" height="524" width="486">
-        <a class="item-img-link" href="#">
-          <img class="item-img-small" src="img/travel-set-1.jpg" height="149" width="140">
-        </a>
-        <a class="item-img-link" href="#">
-          <img class="item-img-small" src="img/travel-set-2.jpg" height="149" width="140">
-        </a>
-        <a class="item-img-link" href="#">
-          <img class="item-img-small" src="img/travel-set-3.jpg" height="149" width="140">
-        </a>
+        <img class="item-img-large" src="img/travel-set-large.jpg" height="524" width="486" alt="Набор для путешествий">
+        <div class="small-photos">
+          <a class="item-img-link" href="#">
+            <img class="item-img-small" src="img/travel-set-1.jpg" height="149" width="140" alt="Набор для путешествий">
+          </a>
+          <a class="item-img-link" href="#">
+            <img class="item-img-small" src="img/travel-set-2.jpg" height="149" width="140" alt="Набор для путешествий">
+          </a>
+          <a class="item-img-link" href="#">
+            <img class="item-img-small" src="img/travel-set-3.jpg" height="149" width="140" alt="Набор для путешествий">
+          </a>
+        </div>
       </figure>
       <section class="buy-menu">
-        <b>Есть в наличии</b>
-        <b>Артикул: Dexter-AE</b>
+        <b class="presence">Есть в наличии</b>
+        <b class="vendor-code">Артикул: Dexter-AE</b>
         <p>
           Travel kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
         </p>
@@ -75,7 +77,7 @@
           <b>2 900 руб.</b>
         </div>
         <a class="btn btn-buy" href="#">Купить</a>
-        <h3>В набор входят:</h3>
+        <h2>В набор входят:</h2>
         <ul class="equipment">
           <li>Средство для умывания (50 мл)</li>
           <li>Увлажняющий крем (50 мл)</li>
