--- a/barbershop-price.html
+++ b/barbershop-price.html
@@ -8,10 +8,10 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
+          <a href="index.html">
+            <img src="img/secondary-logo.png" width="111" height="24" title="Go to Home page" alt="Barbershop">
+          </a>
           <ul>
-            <li>
-              <a href="index.html"><img src="img/secondary-logo.png" width="111" height="24" title="Go to Home page" alt="Barbershop"></a>
-            </li>
             <li>
               <a href="#">Информация</a>
             </li>
@@ -36,8 +36,8 @@
     </header>
     <main class="container">
       <section class="price-header">
-        <h2 class="price-header-title">Средства для ухода</h2>
-        <nav class="price-breadcrumbs">
+        <h1>Прайс-лист</h1>
+        <div class="breadcrumbs">
           <ul>
             <li>
               <a href="index.html">Главная</a>
@@ -45,12 +45,12 @@
             <!-- diamonds will be added with pseudo-elements -->
             <li>Прайс-лист</li>
           </ul>
-        </nav>        
+        </div>        
       </section>
       <div class="price-title">
-        <h1>———— Истинно мужская классика ————</h1> <!-- while styling, center lines would be replaced by 2px-height divs -->
+        Истинно мужская классика
       </div>
-      <section class="best-treats">
+      <section class="price-features">
         <h2>
           Мы используем только<br>
           лучшие средства:
@@ -62,7 +62,7 @@
           <li>Malin+Goetz</li>
         </ul>
       </section>
-      <section class="service-prices">
+      <section class="price-features">
         <h2>
           Цены на услуги<br>
           наших мастеров:
@@ -82,9 +82,11 @@
           </tr>
         </table>
       </section>
-      <section class="about-us">
+      <section class="price-features">
         <h2>Несколько слов о нас:</h2>
         <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+      </section>
+      <section class="price-features-added">
         <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для Вас атмосферу, чувствовать себя комфортно и свободно!</p>
       </section>
     </main>
