Вторая доработка разметки "Барбершоп"
Поправлена активная ссылка в навигации, убраны излишние <b>.

--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -21,8 +21,8 @@
             <li>
               <a href="barbershop-price.html">Прайс-лист</a>
             </li>
-            <li>
-              <b>Магазин</b>
+            <li class="main-navigation-active">
+              Магазин
             </li>
             <li>
               <a href="#">Контакты</a>
