--- a/barbershop-price.html
+++ b/barbershop-price.html
@@ -18,8 +18,8 @@
             <li>
               <a href="#">Новости</a>
             </li>
-            <li>
-              <b>Прайс-лист</b>
+            <li class="main-navigation-active">
+              Прайс-лист
             </li>
             <li>
               <a href="#">Магазин</a>
