--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -21,8 +21,8 @@
             <li>
               <a href="barbershop-price.html">Прайс-лист</a>
             </li>
-            <li>
-              <b>Магазин</b>
+            <li class="main-navigation-active">
+              Магазин
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -81,11 +81,11 @@
             <img src="img/travel-set.jpg" width="220" height="165" title="Подробнее о наборе" alt="Набор Baxter of California">
           </a>
           <a href="barbershop-item.html">
-            <b>Набор для путешествий<br>
-              <span>"Baxter of California"</span></b>
+            Набор для путешествий<br>
+            <span>"Baxter of California"</span>
           </a>
           <div class="item-price">
-            <b>2 900 руб.</b>
+            2 900 руб.
           </div>
           <a class="btn btn-buy" href="#">Купить</a>
         </article>
@@ -94,11 +94,11 @@
             <img src="img/conditioner.jpg" width="220" height="165" title="Подробнее о кондиционере" alt="Кондиционер Baxter of California">
           </a>
           <a href="#">
-            <b>Увлажняющий кондиционер<br>
-              <span>"Baxter of California"</span></b>
+            Увлажняющий кондиционер<br>
+            <span>"Baxter of California"</span>
           </a>
           <div class="item-price">
-            <b>750 руб.</b>
+            750 руб.
           </div>
           <a class="btn btn-buy" href="#">Купить</a>
         </article>
@@ -107,11 +107,11 @@
             <img src="img/gel-suavecito.jpg" width="220" height="165" title="Подробнее о геле" alt="Гель Suavecito">
           </a>
           <a href="#">
-            <b>Гель для волос<br>
-              <span>"Suavecito"</span></b>
+            Гель для волос<br>
+            <span>"Suavecito"</span>
           </a>
           <div class="item-price">
-            <b>290 руб.</b>
+            290 руб.
           </div>
           <a class="btn btn-buy" href="#">Купить</a>
         </article>
@@ -120,11 +120,11 @@
             <img src="img/clay.jpg" width="220" height="165" title="Подробнее о глине" alt="Глина American crew">
           </a>
           <a href="#">
-            <b>Глина для укладки волос<br>
-              <span>"American crew"</span></b>
+            Глина для укладки волос<br>
+            <span>"American crew"</span>
           </a>
           <div class="item-price">
-            <b>500 руб.</b>
+            500 руб.
           </div>
           <a class="btn btn-buy" href="#">Купить</a>
         </article>
@@ -133,11 +133,11 @@
             <img src="img/gel-american.jpg" width="220" height="165" title="Подробнее о геле" alt="Гель American crew">
           </a>
           <a href="#">
-            <b>Гель для волос<br>
-              <span>"American crew"</span></b>
+            Гель для волос<br>
+            <span>"American crew"</span>
           </a>
           <div class="item-price">
-            <b>300 руб.</b>
+            300 руб.
           </div>
           <a class="btn btn-buy" href="#">Купить</a>
         </article>
@@ -146,11 +146,11 @@
             <img src="img/shaving-kit.jpg" width="220" height="165" title="Подробнее о наборе" alt="Набор Baxter of California">
           </a>
           <a href="#">
-            <b>Набор для бритья<br>
-            <span>"Baxter of California"</span></b>
+            Набор для бритья<br>
+            <span>"Baxter of California"</span>
           </a>
           <div class="item-price">
-            <b>3 900 руб.</b>
+            3 900 руб.
           </div>
           <a class="btn btn-buy" href="#">Купить</a>
         </article>
