--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <a href="index.html">
             <img src="img/secondary-logo.png" width="111" height="24" title="Go to Home page" alt="Barbershop">
@@ -35,7 +35,7 @@
         </div>
       </div>
     </header>
-    <main class="container">
+    <main class="item-container clearfix">
       <section class="item-header">
         <h1>Набор для путешествий "Baxter of California"</h1>
         <div class="breadcrumbs">
@@ -55,16 +55,16 @@
         </div>        
       </section>
       <figure class="item-img">
-        <img class="item-img-large" src="img/travel-set-large.jpg" height="524" width="486" alt="Набор для путешествий">
+        <img class="item-img-large" src="img/travel-set-large.jpg" height="498" width="460" alt="Набор для путешествий">
         <div class="small-photos">
           <a class="item-img-link" href="#">
-            <img class="item-img-small" src="img/travel-set-1.jpg" height="175" width="166" alt="Набор для путешествий">
+            <img class="item-img-small" src="img/travel-set-1.jpg" height="149" width="140" alt="Набор для путешествий">
           </a>
           <a class="item-img-link" href="#">
-            <img class="item-img-small" src="img/travel-set-2.jpg" height="175" width="166" alt="Набор для путешествий">
+            <img class="item-img-small" src="img/travel-set-2.jpg" height="149" width="140" alt="Набор для путешествий">
           </a>
           <a class="item-img-link" href="#">
-            <img class="item-img-small" src="img/travel-set-3.jpg" height="175" width="166" alt="Набор для путешествий">
+            <img class="item-img-small" src="img/travel-set-3.jpg" height="149" width="140" alt="Набор для путешествий">
           </a>
         </div>
       </figure>
@@ -89,7 +89,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
