--- a/barbershop-price.html
+++ b/barbershop-price.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <a href="index.html">
             <img src="img/secondary-logo.png" width="111" height="24" title="Go to Home page" alt="Barbershop">
@@ -35,7 +35,7 @@
         </div>
       </div>
     </header>
-    <main class="container">
+    <main class="price-container clearfix">
       <section class="price-header">
         <h1>Прайс-лист</h1>
         <div class="breadcrumbs">
@@ -87,12 +87,12 @@
         <h2>Несколько слов о нас:</h2>
         <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
       </section>
-      <section class="price-features-added">
+      <section class="price-features">
         <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для Вас атмосферу, чувствовать себя комфортно и свободно!</p>
       </section>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
