--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп - набор для путешествий</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
+      <div class="header-item-page">
       <div class="container clearfix">
-        <nav class="main-navigation">
-          <a href="index.html">
-            <img src="img/secondary-logo.png" width="111" height="24" title="Go to Home page" alt="Barbershop">
-          </a>
+        <nav class="main-navigation">          
           <ul>
+            <li>
+              <a class="to-main-page" href="index.html">
+                <img src="img/secondary-logo.png" width="111" height="24" title="Go to Home page" alt="Barbershop">
+              </a>
+            </li>
             <li>
               <a href="#">Информация</a>
             </li>
@@ -33,6 +38,7 @@
         <div class="user-block">
           <a class="login" href="#">Вход</a>
         </div>
+      </div>
       </div>
     </header>
     <main class="item-container clearfix">
@@ -55,16 +61,16 @@
         </div>        
       </section>
       <figure class="item-img">
-        <img class="item-img-large" src="img/travel-set-large.jpg" height="498" width="460" alt="Набор для путешествий">
+        <img class="item-img-large" src="img/travel-set-large.jpg" height="522" width="484" alt="Набор для путешествий">
         <div class="small-photos">
           <a class="item-img-link" href="#">
-            <img class="item-img-small" src="img/travel-set-1.jpg" height="149" width="140" alt="Набор для путешествий">
+            <img class="item-img-small" src="img/travel-set-1.jpg" height="173" width="164" alt="Набор для путешествий">
           </a>
           <a class="item-img-link" href="#">
-            <img class="item-img-small" src="img/travel-set-2.jpg" height="149" width="140" alt="Набор для путешествий">
+            <img class="item-img-small" src="img/travel-set-2.jpg" height="173" width="164" alt="Набор для путешествий">
           </a>
           <a class="item-img-link" href="#">
-            <img class="item-img-small" src="img/travel-set-3.jpg" height="149" width="140" alt="Набор для путешествий">
+            <img class="item-img-small" src="img/travel-set-3.jpg" height="173" width="164" alt="Набор для путешествий">
           </a>
         </div>
       </figure>
@@ -76,8 +82,8 @@
         </p>
         <div class="item-price">
           <b>2 900 руб.</b>
-        </div>
-        <a class="btn btn-buy" href="#">Купить</a>
+        </div><!--
+        --><a class="btn btn-buy" href="#">Купить</a>
         <h2>В набор входят:</h2>
         <ul class="equipment">
           <li>Средство для умывания (50 мл)</li>
@@ -88,7 +94,8 @@
         </ul>
       </section>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer item-footer"> 
+      <div class="shadow-footer"></div>
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
@@ -106,7 +113,7 @@
           <p>Разработано:</p>
           <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
         </section>
-      </div>
+      </div>      
     </footer>
   </body>
 </html>
