Завершаем вёрстку «Барбершопа»
Произведен ряд оптимизаций, в основном - для выполнения критерия
переполнения контентом. Добавлено 2 всплывающих окна на главную
страницу. Карту попробовал задать с помощью скрипта. Пока специально не
делал ей "display: none" - для демонстрации.

--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -49,7 +49,6 @@
             <li>
               <a href="index.html">Главная</a>
             </li>
-            <!-- diamonds will be added with pseudo-elements -->
             <li>
               <a href="#">Магазин</a>
             </li>
@@ -60,26 +59,26 @@
       <section class="producers-form">
         <h2>Производители:</h2>
         <form action="#" method="get">
-          <input type="checkbox" name="producers" id="ch1" checked>
+          <input id="ch1" type="checkbox" name="producers" checked>
             <label for="ch1">Baxter of California</label>
-          <input type="checkbox" name="producers" id="ch2">
+          <input id="ch2" type="checkbox" name="producers">
             <label for="ch2">Mr Natty</label>
-          <input type="checkbox" name="producers" id="ch3" checked>
+          <input id="ch3" type="checkbox" name="producers" checked>
             <label for="ch3">Suavecito</label>
-          <input type="checkbox" name="producers" id="ch4">
+          <input id="ch4" type="checkbox" name="producers">
             <label for="ch4">Malin+Goetz</label>
-          <input type="checkbox" name="producers" id="ch5">
+          <input id="ch5" type="checkbox" name="producers" >
             <label for="ch5">Murray`s</label>
-          <input type="checkbox" name="producers" id="ch6" checked>
+          <input id="ch6" type="checkbox" name="producers" checked>
             <label for="ch6">American Crew</label>
         </form>
         <h2>Группы товаров:</h2>
         <form action="#" method="get">
-          <input type="radio" name="good-groups" id="rad1">
+          <input id="rad1" type="radio" name="good-groups">
             <label for="rad1">Бритвенные принадлежности</label>
-          <input type="radio" name="good-groups" id="rad2" checked>
+          <input id="rad2" type="radio" name="good-groups" checked>
             <label for="rad2">Средства для ухода</label>
-          <input type="radio" name="good-groups" id="rad3">
+          <input id="rad3" type="radio" name="good-groups">
             <label for="rad3">Аксессуары</label>
           <input class="btn btn-show" type="submit" value="Показать">
         </form>
