--- a/barbershop-price.html
+++ b/barbershop-price.html
@@ -49,53 +49,56 @@
             <li>
               <a href="index.html">Главная</a>
             </li>
-            <!-- diamonds will be added with pseudo-elements -->
             <li>Прайс-лист</li>
           </ul>
         </div>
       </section>
       <div class="price-title">
-        Истинно мужская классика
+        <h2>Истинно мужская классика</h2>
       </div>
-      <section class="price-features">
-        <h2>
-          Мы используем только<br>
-          лучшие средства:
-        </h2>
-        <ul>
-          <li>Baxter of California</li>
-          <li>Mr Natty</li>
-          <li>Suavecito</li>
-          <li>Malin+Goetz</li>
-        </ul>
-      </section>
-      <section class="price-features">
-        <h2>
-          Цены на услуги<br>
-          наших мастеров:
-        </h2>
-        <table class="service-prices-table">
-          <tr>
-            <td>Стрижка</td>
-            <td>1500 р.</td>
-          </tr>
-          <tr>
-            <td>Стрижка бороды</td>
-            <td>500 р.</td>
-          </tr>
-          <tr>
-            <td>Накрутка усов</td>
-            <td>350 р.</td>
-          </tr>
-        </table>
-      </section>
-      <section class="price-features">
+      <div class="inner-columns clearfix">
+        <section class="price-features-left">
+          <h2>
+            Мы используем только<br>
+            лучшие средства:
+          </h2>
+          <ul>
+            <li>Baxter of California</li>
+            <li>Mr Natty</li>
+            <li>Suavecito</li>
+            <li>Malin+Goetz</li>
+          </ul>
+        </section>
+        <section class="price-features-right">
+          <h2>
+            Цены на услуги<br>
+            наших мастеров:
+          </h2>
+          <table class="service-prices-table">
+            <tr>
+              <td>Стрижка</td>
+              <td>1500 р.</td>
+            </tr>
+            <tr>
+              <td>Стрижка бороды</td>
+              <td>500 р.</td>
+            </tr>
+            <tr>
+              <td>Накрутка усов</td>
+              <td>350 р.</td>
+            </tr>
+          </table>
+        </section>
+      </div>
+      <div class="inner-columns clearfix">
         <h2>Несколько слов о нас:</h2>
-        <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
-      </section>
-      <section class="price-features">
-        <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для Вас атмосферу, чувствовать себя комфортно и свободно!</p>
-      </section>
+        <section class="price-features-left">
+          <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+        </section>
+        <section class="price-features-right">
+          <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для Вас атмосферу, чувствовать себя комфортно и свободно!</p>
+        </section>
+      </div>
     </main>
     <footer class="main-footer price-footer">
       <div class="shadow-footer"></div>
