Завершаем вёрстку «Барбершопа»
Устранены замечания.

--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
               <a href="#">Новости</a>
             </li>
             <li>
-              <a href="barbershop-price.html">Прайс-лист</a>
+              <a href="price.html">Прайс-лист</a>
             </li>
             <li class="main-navigation-active">
               Магазин
@@ -50,7 +50,7 @@
               <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="#">Магазин</a>
+              <a href="shop.html">Магазин</a>
             </li>
             <li>Средства для ухода</li>
           </ul>
@@ -85,10 +85,10 @@
       </section>
       <section class="items-list">
         <article class="item">
-          <a href="barbershop-item.html">
+          <a href="item.html">
             <img src="img/travel-set.jpg" width="220" height="165" title="Подробнее о наборе" alt="Набор Baxter of California">
           </a>
-          <a href="barbershop-item.html">
+          <a href="item.html">
             Набор для путешествий<br>
             <span>"Baxter of California"</span>
           </a>
