--- a/item.html
+++ b/item.html
@@ -25,7 +25,7 @@
               <a href="#">Новости</a>
             </li>
             <li>
-              <a href="barbershop-price.html">Прайс-лист</a>
+              <a href="price.html">Прайс-лист</a>
             </li>
             <li class="main-navigation-active">
               Магазин
@@ -50,7 +50,7 @@
               <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="#">Магазин</a>
+              <a href="shop.html">Магазин</a>
             </li>
             <li>
               <a href="#">Средства для ухода</a>
