--- a/price.html
+++ b/price.html
@@ -28,7 +28,7 @@
               Прайс-лист
             </li>
             <li>
-              <a href="#">Магазин</a>
+              <a href="shop.html">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
